k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: risk
  name: risk
spec:
  replicas: 3
  selector:
    matchLabels:
      app: risk
  strategy: {}
  template:
    metadata:
      labels:
        app: risk
    spec:
      containers:
        - image: localhost:5001/risk:1.3.0
          name: risk
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /risks/health
              port: 8080
          livenessProbe:
            httpGet:
              path: /risks/health
              port: 8080
status: {}
