k8s/postgres.yaml
#
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          volumeMounts:
            - mountPath: "/data/db"
              name: postgres-volume
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb-script
          resources:
            requests:
              cpu: 0.2
              memory: "200Mi"
            limits:
              cpu: 0.5
              memory: "400Mi"
          ports:
            - containerPort: 5432
              name: default
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: initdb-script
          configMap:
            name: postgres-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
