k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: risk-service
  name: risk-service
spec:
  ports:
    - name: http
      port: 5678
      protocol: TCP
      targetPort: 8080
  selector:
    app: risk
  type: ClusterIP
