k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: risk-app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: risk-service
                port:
                  number: 5678
